--- a/views/board.ejs
+++ b/views/board.ejs
@@ -180,19 +180,23 @@
               <%= post.title %> <span class="post-author">- <%= post.author %></span>
             </a>
             <div class="actions">
-              <a href="/board/edit/<%= post.id %>">수정</a>
-              <a href="/board/delete/<%= post.id %>" onclick="return confirm('정말 삭제하시겠습니까? 관련 답글도 모두 삭제됩니다.')">삭제</a>
+              <% if (post.isAuthor) { %>
+                <a href="/board/edit/<%= post.id %>">수정</a>
+                <a href="/board/delete/<%= post.id %>" onclick="return confirm('정말 삭제하시겠습니까? 관련 답글도 모두 삭제됩니다.')">삭제</a>
+              <% } %>
             </div>
           </li>
           <% if (post.replies && post.replies.length > 0) { %>
             <% post.replies.forEach(reply => { %>
               <li class="post-item reply-item">
                 <a href="/board/view/<%= reply.id %>">
-                  <span class="reply-prefix">└ Re:<span class="post-author">- <%= reply.author %></span>
+                  <span class="reply-prefix">└ Re:</span><%= reply.title %> <span class="post-author">- <%= reply.author %></span>
                 </a>
                 <div class="actions">
-                  <a href="/board/edit/<%= reply.id %>">수정</a>
-                  <a href="/board/delete/<%= reply.id %>" onclick="return confirm('정말 삭제하시겠습니까?')">삭제</a>
+                  <% if (reply.isAuthor) { %>
+                    <a href="/board/edit/<%= reply.id %>">수정</a>
+                    <a href="/board/delete/<%= reply.id %>" onclick="return confirm('정말 삭제하시겠습니까?')">삭제</a>
+                  <% } %>
                 </div>
               </li>
             <% }); %>
